[project]
name = "quiver"
version = "0.1.0"
description = "Hermes adaptive context optimizer and lazy tool router"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Raymond Delgado / Onchito"}]
dependencies = []

[project.scripts]
quiver = "quiver.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["quiver"]
