[project]
name = "quiver"
version = "0.1.0"
description = "Hermes adaptive context optimizer and lazy tool router"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Ramon Delgado", email = "ray@raymonddelgado.com"}]

[project.scripts]
quiver = "quiver.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-v -p no:warnings"
testpaths = ["tests"]
